--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Run tests with coverage
         # --cov-report=xml → génère le fichier coverage.xml nécessaire à Codecov
-        run: pytest --cov=utils --cov-report=xml --cov-report=term-missing
+        run: pytest --cov=utils --cov=scripts --cov-report=xml --cov-report=term-missing
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
